[tool.poetry]
name = "pps_backend"
version = "0.1.0"
description = ""
authors = ["PatkaSm <patrycja.s449@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.0.5"
djangorestframework = "^3.11.2"
django-cors-headers = "^3.2.1"
sqlparse = "^0.3.1"
pytz = "^2019.3"
coverage = "^5.1"
Pillow = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
